aws-reference/tks-admin-tools/keycloak/Ingress_keycloak.yaml
# Source: keycloak/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: "keycloak"
  labels:
    app.kubernetes.io/name: keycloak
    helm.sh/chart: keycloak-15.1.6
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: keycloak
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: http0issuer
    nginx.ingress.kubernetes.io/proxy-buffer-size: 20k
spec:
  ingressClassName: "nginx"
  rules:
    - host: "TO_BE_FIXED"
      http:
        paths:
          - path: /auth/
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
  tls:
    - hosts:
        - "TO_BE_FIXED"
      secretName: TO_BE_FIXED-tls
